--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,19 @@
 </head>
 
 <body>
+  <!-- <script>
+    // Check that service workers are supported
+    if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
+    }
+  </script> -->
   <script is="nitro-script" type="text/nitroscript">
-      log("test");
+      console.log("test");
     </script>
-  <script is="nitro-script" type="text/nitroscript" src="public/test.explosive-code"></script>
+  <script is="nitro-script" type="text/nitroscript" src="public/test.nitroscript"></script>
 </body>
 
 </html>
